--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         
         $(function() {
           var myMap = new MapsLib({
-            fusionTableId:      "1m4Ez9xyTGfY2CU6O-UgEcPzlS0rnzLU93e4Faa0",
+            fusionTableId:      "18lyMeCyoJTuZdU96a-ZkUs-Uy1j_6Nhc2EIzAYUr",
             googleApiKey:       "AIzaSyC_52MLDz8ATQBv50ysbF9QItvEN3Jn71E",
-            locationColumn:     "geometry",
+            locationColumn:     "LATITUDE",
             map_center:         [41.8781136, -87.66677856445312],
             locationScope:      "chicago"
           });
